--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Logs
 logs
 *.log
+test
+test/*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -104,3 +106,4 @@ dist
 .tern-port
 yarn.lock
 .idea
+test/test.ts
