--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-sanitizer",
-  "version": "1.0.11",
+  "version": "1.0.13",
   "main": "index.js",
   "scripts": {
     "build": "npx tsc"
@@ -12,5 +12,12 @@
   "devDependencies": {
     "typescript": "^4.4.3"
   },
-  "keywords": ["sanitizer", "nodejs", "browser", "sanitize", "vanilla", "parser"]
+  "keywords": [
+    "sanitizer",
+    "nodejs",
+    "browser",
+    "sanitize",
+    "vanilla",
+    "parser"
+  ]
 }
